ingress/nginx/ingress-keycloak.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: baselab
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-production"

spec:
  tls:
  - hosts:
    - keycloak.lab.fauxshadow.net
    secretName: lab-fauxshadow-net-prod-tls
  rules:
  - host: keycloak.lab.fauxshadow.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
