ingress/nginx/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgb-nginx
  namespace: baselab
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-production"

spec:
  tls:
  - hosts:
    - rgb.lab.fauxshadow.net
    secretName: lab-fauxshadow-net-prod-tls
  rules:
  - host: rgb.lab.fauxshadow.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-rgb
            port:
              number: 80
  - host: red.lab.fauxshadow.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-red
            port:
              number: 80
  - host: green.lab.fauxshadow.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-green
            port:
              number: 80
  - host: blue.lab.fauxshadow.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-blue
            port:
              number: 80
